secexplorer/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${STATEFUL_SET}
  namespace: ${NAMESPACE}
spec:
  serviceName: ${SERVICE}
  selector:
    matchLabels:
      service: ${SERVICE}
  template:
    metadata:
      labels:
        service: ${SERVICE}
    spec:
      runtimeClassName: gvisor

      volumes:
      - name: ${NGINX_VOLUME}
        configMap:
          name: ${NGINX_CONFIG}
      - name: ${SERVICE_VOLUME}
        persistentVolumeClaim:
          claimName: ${SERVICE_VOLUME}

      containers:
      - name: nginx
        image: nginx
        ports:
        - name: ${TARGET_PORT}
          containerPort: 80
        volumeMounts:
        - name: ${NGINX_VOLUME}
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true

      - name: neo4j
        image: neo4j:3.5
        command: ['sh', '-c']
        args:
        - |
          cat <<EOF >> conf/neo4j.conf
          dbms.connector.bolt.advertised_address=${DNS_HOSTNAME}:443
          dbms.logs.debug.path=/dev/stdout
          dbms.logs.http.path=/dev/stdout
          dbms.logs.query.path=/dev/stdout
          dbms.logs.security.path=/dev/stdout
          dbms.logs.user.path=/dev/stdout
          EOF
          exec /docker-entrypoint.sh neo4j
        volumeMounts:
        - name: ${SERVICE_VOLUME}
          mountPath: /data
